# retrieval-weight-experiment

./: .dockerignore  .env.example  .gitignore  CITATION.cff  Dockerfile  LICENSE  README.md  docker-compose.yaml  pyproject.toml
.github/: CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
configs/: experiment.yaml
data/: LICENSE  generate_ground_truth_v3.py  ground_truth_v3.json  warm_start_priors.json
data/skills/: library_v3.json
data/tasks/: corpus_annotated.json  corpus_v3.json
docs/: STATISTICAL_ANALYSIS_PLAN.md
paper/: main.tex  references.bib
paper/sections/: abstract.tex  appendix.tex  conclusion.tex  discussion.tex  ethics.tex  experiment_v2.tex  experiment_v3.tex  introduction.tex  limitations.tex  method.tex  outlier_analysis.tex  related_work.tex  reproducibility.tex
results/: analysis_summary.json  primary_metrics.csv  rewards_c1.csv  rewards_c2.csv  rewards_c3.csv  rewards_c4.csv  statistical_tests.json  theme_breakdown.csv
scripts/: analyze_experiment.py  annotate_ground_truth.py  bootstrap_ci_v3.py  compare_v2_v3.py  dashboard.html  dashboard.py  export_results_csv.py  extract_posterior_evolution.py  generate_token_boxplots.py  load_skills.py  monitor.py  outlier_analysis_v3.py  pairwise_tests_v3.py  per_condition_analysis.py  run_full_experiment.py  run_integration_test.py  verify_paper_figures.py  warm_start.py
tests/: test_bandit.py  test_db_integrity.py  test_embedder.py  test_feedback_parser.py  test_fts5_bm25.py  test_integration.py  test_learning_components.py  test_minimax_client.py  test_pid_controller.py  test_rate_control.py  test_runner.py  test_schema.py  test_scoring.py  test_search.py
(+17 files in other folders)
